kolejne funkcje cruda
